src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;500;600;700;800&display=swap');

body{
   font-family: 'Assistant', sans-serif;
}

/********** Range Input Styles **********/
/*Range Reset*/
input[type="range"] {
    -webkit-appearance: none;
     appearance: none;
     background: transparent;
     cursor: pointer;
     width: 15rem;
     
 }
 

 /***** Chrome, Safari, Opera and Edge Chromium styles *****/
 /* slider track */
 input[type="range"]::-webkit-slider-runnable-track {
    background-color: #053a5f;
    border-radius: 0.5rem;
    height: 0.15rem; 
    
 }
 
 /* slider thumb */
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none; /* Override default look */
    appearance: none;
    margin-top: -9px; /* Centers thumb on the track */
    /*custom styles*/
    background-color: white;
    border: solid 0.5px rgb(196, 195, 195);
    border-radius: 3px;
    height: 1.4rem;
    width: 1.8rem;
    position: relative;
 }
 
 
 /******** Firefox styles ********/
 /* slider track */
 input[type="range"]::-moz-range-track {
    background-color: #053a5f;
    border-radius: 0.5rem;
    height: 0.25rem;
 }
 
 /* slider thumb */
 input[type="range"]::-moz-range-thumb {
    border: none; /*Removes extra border that FF applies*/
    border-radius: 0; /*Removes default border-radius that FF applies*/
 
    /*custom styles*/
    background-color: white;
    border: solid 0.5px rgb(196, 195, 195);
    border-radius: 3px;
    height: 1rem;
    width: 1.8rem;
 }
 
 .css-b62m3t-container{
   min-width: calc(100% - 40px);
   margin: 0;
   width: 100% !important;
}

